canary/simple/deployment-blue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blue-app
  labels:
    app: blue-app
spec:
  replicas: 4
  selector:
    matchLabels:
      app: blue-app
  template:
    metadata:
      labels:
        app: blue-app
        group: canary-simple
    spec:
      containers:
        - name: blue-app
          image: argoproj/rollouts-demo:blue
          readinessProbe: 
            httpGet:
              path: /color
              port: http
            timeoutSeconds: 5
            periodSeconds: 10
          imagePullPolicy: Always
          ports:
          - name: http
            containerPort: 8080
          resources:
            limits:
              cpu: 250m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 128Mi
