canary/simple/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: canary-simple
  labels:
     app: canary-simple
spec:
  ports:
  - nodePort: 32080
    port: 8080
    targetPort: http
    name: http
  selector:
    group: canary-simple
  type: NodePort
